--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,7 +181,7 @@ padding:20px;
 }
 @font-face {
     font-family: 'HeadFont';
-    src: url('/Users/artyomchernenko/Desktop/gitHub/WebSite/assets/font-awesome-4.1.0/fonts/Montserrat-VariableFont_wght.ttf') format('woff2'),
+    src: url('assets/font-awesome-4.1.0/fonts/Montserrat-VariableFont_wght.ttf') format('woff2'),
          url('assets/fonts/MyFont-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
