--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,14 +174,14 @@ padding:20px;
 }
 @font-face {
     font-family: 'TextFont';
-    src: url('/assets/font-awesome-4.1.0/fonts/Nunito-VariableFont_wght.ttf') format('woff2'),
+    src: url('assets/font-awesome-4.1.0/fonts/Nunito-VariableFont_wght.ttf') format('woff2'),
          url('assets/fonts/MyFont-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'HeadFont';
-    src: url('/assets/font-awesome-4.1.0/fonts/Montserrat-VariableFont_wght.ttf') format('woff2'),
+    src: url('assets/font-awesome-4.1.0/fonts/Montserrat-VariableFont_wght.ttf') format('woff2'),
          url('assets/fonts/MyFont-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
