--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,5 +195,23 @@ padding:20px;
   font-weight: <weight>;
   font-style: normal;
 }
+body {
+    font-family: 'Montserrat', sans-serif; /* Основной шрифт Montserrat */
+}
+
+h1, h2, h3 {
+    font-family: 'Nunito', sans-serif; /* Для заголовков используем Nunito */
+}
+
+p {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400; /* Используем толщину 400 */
+}
+
+strong {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700; /* Используем жирный стиль */
+}
+
 
 }
