--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,11 +169,17 @@ body {
 
 h1, h2, h3 {
     font-family: 'Nunito', sans-serif;
+    font-weight: 200;
 }
 
 p {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
 
+}
 
+strong {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 800; 
+}
 }
