--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,4 +181,10 @@ strong {
     font-family: 'Montserrat', sans-serif;
     font-weight: 800; 
 }
+.navbar-brand {
+    font-family: Arial, sans-serif;
+    font-weight: lighter; /* Используйте "lighter" для самого тонкого веса */
+    font-size: 24px;
+    color: #333;
+}
 }
