--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,7 +183,7 @@ strong {
 }
 .navbar-brand {
     font-family: Nunito, sans-serif;
-    font-weight: bold; /* Используйте "lighter" для самого тонкого веса */
+    font-weight: lighter; 
     font-size: 24px;
     color: #333;
 }
