--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,4 +185,20 @@ h1, h2, h3, h4, h5, h6{
         margin-left: 8px; /* Сдвиг вправо на мобильных */
     }
 }
+@media (max-width: 768px) {
+    .video-container {
+        width: 100%; /* Контейнер занимает всю ширину экрана */
+        max-width: 400px; /* Максимальная ширина контейнера */
+        height: auto; /* Высота будет пропорциональной */
+        border: 1px solid black; /* Чёрная рамка */
+        border-radius: 10px; /* Скруглённые углы */
+        overflow: hidden; /* Скрываем выходящее за рамки */
+        margin: 0 auto; /* Центрируем контейнер */
+    }
+
+    .video {
+        width: 100%; /* Видео растягивается по ширине контейнера */
+        height: auto; /* Высота рассчитывается автоматически */
+    }
+}
 
