--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,12 +193,16 @@ h1, h2, h3, h4, h5, h6{
         border: 1px solid black;
         border-radius: 10px;
         overflow: hidden;
+        position: relative;
+        padding-top: 56.25%; /* 16:9 ratio */
     }
 
     .video-container iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
-        height: auto;
-        aspect-ratio: 16 / 9;
+        height: 100%;
     }
 }
 
