--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,7 +182,7 @@ h1, h2, h3, h4, h5, h6{
 
 @media (max-width: 768px) {
     .photo {
-        margin-left: 8px; /* Сдвиг вправо на мобильных */
+        margin-left: 8px; 
     }
 }
 @media (max-width: 768px) {
@@ -194,15 +194,15 @@ h1, h2, h3, h4, h5, h6{
         border-radius: 10px;
         overflow: hidden;
         position: relative;
-        padding-top: 56.25%; /* 16:9 ratio */
+        aspect-ratio: 16 / 9; 
     }
 
     .video-container iframe {
+        width: 100%;
+        height: 100%;
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
     }
 }
 
