--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,15 +194,15 @@ h1, h2, h3, h4, h5, h6{
         border-radius: 10px;
         overflow: hidden;
         position: relative;
-        aspect-ratio: 16 / 9; 
+        padding-top: 56.25%; /* 16:9 aspect ratio */
     }
 
     .video-container iframe {
-        width: 100%;
-        height: 100%;
         position: absolute;
         top: 0;
         left: 0;
+        width: 100%;
+        height: 100%;
     }
 }
 
