--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,29 +186,23 @@ h1, h2, h3, h4, h5, h6{
     }
 }
 
-@media (max-width: 768px) {
-    .video-container {
-        position: relative;
-        width: 90%;
-        max-width: 340px;
-        margin: 0 auto;
-        border: 1px solid black;
-        border-radius: 10px;
-        overflow: hidden;
-    }
-    
-    .video-container::before {
-        content: "";
-        display: block;
-        padding-top: 56.25%; /* 16:9 aspect ratio */
-    }
+.video-container {
+    position: relative;
+    width: 90%;
+    max-width: 340px;
+    margin: 0 auto;
+    border: 1px solid black;
+    border-radius: 10px;
+    overflow: hidden;
+    height: 0;
+    padding-top: 56.25%; /* 16:9 ratio */
+}
 
-    .video-container iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
