--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,23 +186,25 @@ h1, h2, h3, h4, h5, h6{
     }
 }
 
-.video-container {
-    position: relative;
-    width: 90%;
-    max-width: 340px;
-    margin: 0 auto;
-    border: 1px solid black;
-    border-radius: 10px;
-    overflow: hidden;
-    height: 0;
-    padding-top: 56.25%; /* 16:9 ratio */
-}
+@media (max-width: 768px) {
+    .video-container {
+        position: relative;
+        width: 80%; /* Сужаем контейнер */
+        max-width: 280px; /* Делаем уже на мобильных */
+        margin: 0 auto;
+        border: 1px solid black;
+        border-radius: 10px;
+        overflow: hidden;
+        height: 0;
+        padding-top: 56.25%; /* 16:9 aspect ratio */
+    }
 
-.video-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    .video-container iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
 
