--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-﻿/*=============================================================
+/*=============================================================
     Authour URI: www.binarytheme.com
     License: Commons Attribution 3.0
 
@@ -182,25 +182,22 @@ h1, h2, h3, h4, h5, h6{
 
 @media (max-width: 768px) {
     .photo {
-        margin-left: 8px; 
+        margin-left: 8px; /* Сдвиг вправо на мобильных */
     }
 }
-
 @media (max-width: 768px) {
     .video-container {
-        position: relative;
-        width: 80%; /* Контейнер уже */
-        max-width: 320px; /* Ограничиваем ширину */
-        margin: 0 auto;
-        border: 1px solid black;
-        border-radius: 10px;
-        overflow: hidden;
-        height: auto;
+        width: 100%; 
+        max-width: 320px; 
+        height: auto; 
+        border: 1px solid black; 
+        border-radius: 10px; 
+        overflow: hidden; 
+        margin: 0 auto; 
     }
 
-    .video-container iframe {
-        width: 100%;
-        height: 180px; /* Фиксированная высота */
+    .video {
+        width: 100%; 
+        height: auto; 
     }
 }
-
