--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,7 +189,7 @@ h1, h2, h3, h4, h5, h6{
     .video-container {
         width: 100%; 
         max-width: 350px; 
-        height: auto; 
+        height: 198; 
         border: 1px solid black; 
         border-radius: 10px; 
         overflow: hidden; 
