--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,8 +188,8 @@ h1, h2, h3, h4, h5, h6{
 @media (max-width: 768px) {
     .video-container {
         width: 100%; 
-        max-width: 350px; 
-        height: 198px; 
+        max-width: 360px; 
+        height: auto; 
         border: 1px solid black; 
         border-radius: 10px; 
         overflow: hidden; 
